classDiagram
    direction TB
    
    class DisponibilidadController {
        +onSearch(fecha, tipoNombre)
    }

    class DisponibilidadService {
        +buscarDisponibles(LocalDate, String) List
    }

    class HabitacionRepository {
        <<interface>>
        +findByEstadoAndTipo(String, String) List
    }

    class Habitacion {
        -String numero
        -String estadoActual
        +getPrecioBase() Double
    }

    class TipoHabitacion {
        -String nombreTipo
        -Double precioBase
        -String descripcion
        +getPrecio() Double
    }

    DisponibilidadController --> DisponibilidadService : usa
    DisponibilidadService --> HabitacionRepository : consulta
    HabitacionRepository ..> Habitacion : retorna
    Habitacion "*" --> "1" TipoHabitacion : clasificada-por